clusters/home/apps/pachtop/ingress.yaml

---
apiVersion: v1
kind: Service
metadata:
  name: pachtop-landing-page
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pachtop-landing-page
  ports:
    - port: 3000
      targetPort: web

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pachtop-landing-page
  annotations:
      kubernetes.io/ingress.class: nginx
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: Pachtop Landing Page
      gethomepage.dev/group: Apps/Services
      gethomepage.dev/icon: https://github.com/pacholoamit/pachtop/blob/master/public/logo-only.png?raw=true
      gethomepage.dev/name: Pachtop Landing Page
      glance/name: "Pachtop"
      glance/icon: "https://raw.githubusercontent.com/pacholoamit/pachtop/master/public/logo-only.png"
      nginx.ingress.kubernetes.io/rewrite-target: /
  labels:
    name: pachtop-landing-page
spec:
  rules:
  - host: pachtop.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pachtop-landing-page
            port: 
              number: 3000




---
apiVersion: v1
kind: Service
metadata:
  name: pachtop-update-server
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: pachtop-update-server
  ports:
    - port: 8000
      targetPort: web

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pachtop-update-server
  annotations:
      kubernetes.io/ingress.class: nginx
      gethomepage.dev/enabled: "true"
      gethomepage.dev/description: This must never go down
      gethomepage.dev/group: Apps/Services
      gethomepage.dev/icon: https://github.com/pacholoamit/pachtop/blob/master/public/logo-only.png?raw=true
      gethomepage.dev/name: Pachtop Update Server
  labels:
    name: pachtop-update-server
spec:
  rules:
  - host: update.pachtop.com # If this fails, add a hostname and point to http://192.168.0.38:8000 in service
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: pachtop-update-server
            port: 
              number: 8000
